--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -7,7 +7,7 @@
 		<ui:define name="menubar">
 			<div class="control" >
 				<div style="float:left;">
-					<p:commandButton id="back" icon="ui-icon ui-icon-plus" value="Board"
+					<p:commandButton id="back" icon="ui-icon ui-icon-plus" value="กระดาน"
 									 styleClass="btn btn-mini btn-info"
 									 action="#{fboardManaged.linkToForm}"/>
 				</div>
