--- a/src/main/webapp/fboard.xhtml
+++ b/src/main/webapp/fboard.xhtml
@@ -8,7 +8,7 @@
 		<ui:define name="menubar">
 			<div class="control" >
 				<div style="float:left;">
-					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="Back"
+					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="กลับ"
 									 styleClass="btn btn-mini btn-info"
 									 action="#{dashboardManaged.linkToList}"/>
 				</div>
@@ -19,7 +19,7 @@
 			<div class="container">
 				<div style="width: 511px;">
 					<div class="row">
-						<h4>ครีเอทโปรเจค</h4>
+						<h4>สร้างกระดานใหม่</h4>
 					</div>
 					<div class="row">
 						<div class="controls">
@@ -27,7 +27,7 @@
 								<span class="add-on"><i class="icon-tasks" ></i></span>
 								<p:inputText id="boardid" style="width: 480px;" disabled="true"
 											 value="#{fboardManaged.board.id}"/>
-								<p:watermark for="boardid" value="AUTO" ></p:watermark>
+								<p:watermark for="boardid" value="ID: " ></p:watermark>
 							</div>
 						</div>
 					</div>
@@ -40,7 +40,7 @@
 											 value="#{fboardManaged.board.boardname}">
 									<f:validateRequired />
 								</p:inputText>
-								<p:watermark for="boardname" value="Board Name" ></p:watermark>
+								<p:watermark for="boardname" value="ชื่อกระดาน" ></p:watermark>
 							</div>
 						</div>
 					</div>
@@ -50,7 +50,7 @@
 							<div style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<p:inputTextarea id="description" style="width: 510px;"
 												 value="#{fboardManaged.board.description}"/>
-								<p:watermark for="description" value="Description" />
+								<p:watermark for="description" value="รายละเอียด" />
 							</div>
 						</div>
 					</div>
@@ -58,7 +58,7 @@
 					<div class="row">
 						<div class="controls">
 							<div style="padding-bottom: 48px; padding-left: 24px; float:left;">
-								<p:commandButton id="remove" icon="ui-icon ui-icon-closethick" value="REMOVE"
+								<p:commandButton id="remove" icon="ui-icon ui-icon-closethick" value="ลบ"
 												 styleClass="btn btn-mini btn-danger" update="msg"
 												 rendered="#{!fboardManaged.newBoard}"
 												 action="#{fboardManaged.remove}"/>
@@ -66,7 +66,7 @@
 						</div>
 						<div class="controls">
 							<div style="float:right;">
-								<p:commandButton id="save" icon="ui-icon ui-icon-check" value="SAVE"
+								<p:commandButton id="save" icon="ui-icon ui-icon-check" value="บันทึก"
 												 styleClass="btn btn-mini btn-success" update="msg"
 												 action="#{fboardManaged.save}"/>
 							</div>
