--- a/src/main/webapp/board.xhtml
+++ b/src/main/webapp/board.xhtml
@@ -26,7 +26,7 @@
 				<div class="input-prepend" style="padding-left: 24px; float:left;">
 					<span class="add-on"><i class="icon-search" ></i></span>
 					<p:inputText id="filter" style="width: 480px;" ></p:inputText>
-					<p:watermark for="filter" value="กรองคำ" ></p:watermark>
+					<p:watermark for="filter" value="กรองสตอรี่" ></p:watermark>
 				</div>
 			</div>
 		</ui:define>
