Implements Create / Update Userstory

--- a/src/main/webapp/board.xhtml
+++ b/src/main/webapp/board.xhtml
@@ -9,7 +9,7 @@
 				<div style="float:left;">
 					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="แผงควบคุม"
 									 styleClass="btn btn-mini btn-info" style="margin-right: 12px;"
-									 action="#{dashboardManaged.linkToList}"/>
+									 onclick="window.location.href='/bgile/dashboard';" />
 				</div>
 				<div style="float:left;">
 					<p:commandButton id="refresh" icon="ui-icon-refresh"
@@ -20,7 +20,7 @@
 				<div style="float:left;">
 					<p:commandButton id="addStory" icon="ui-icon-plusthick" value="สตอรี่"
 									 styleClass="btn btn-mini btn-success"
-									 action="#{boardManaged.addStory}" />
+									 onclick="window.location.href='/bgile/fstory';" />
 				</div>
 
 				<div class="input-prepend" style="padding-left: 24px; float:left;">
@@ -31,19 +31,17 @@
 			</div>
 		</ui:define>
         <ui:define name="content">
-			<div class="container">
-				<div class="row" style="padding-top: 6px; padding-bottom: 6px">
-					<h4 style="width: 280px; text-align: left; float: left;">วางแผน</h4>
-					<h4 style="width: 280px; text-align: left; float: left;">กำลังทำ</h4>
-					<h4 style="width: 280px; text-align: left; float: left;">กำลังทดสอบ</h4>
-					<h4 style="width: 280px; text-align: left; float: left;">เสร็จ</h4>
-				</div>
+			<div class="row-fluid" style="padding-top: 6px; padding-bottom: 6px">
+				<h4 style="width: 280px; text-align: left; float: left;">วางแผน</h4>
+				<h4 style="width: 280px; text-align: left; float: left;">กำลังทำ</h4>
+				<h4 style="width: 280px; text-align: left; float: left;">กำลังทดสอบ</h4>
+				<h4 style="width: 280px; text-align: left; float: left;">เสร็จ</h4>
+			</div>
 
-				<div class="row" style="height: 320px;">
-					<p:dashboard id="dynamic_dashboard" binding="#{boardManaged.dashboard}" >
-						<p:ajax event="reorder" listener="#{boardManaged.handleReorder}" />
-					</p:dashboard>
-				</div>
+			<div class="row-fluid">
+				<p:dashboard id="dynamic_dashboard" binding="#{boardManaged.dashboard}" >
+					<p:ajax event="reorder" listener="#{boardManaged.handleReorder}" />
+				</p:dashboard>
 			</div>
         </ui:define>
     </ui:composition>
