--- a/src/main/webapp/profile.xhtml
+++ b/src/main/webapp/profile.xhtml
@@ -8,7 +8,7 @@
 			<div class="control" style="padding-bottom: 24px; padding-left: 24px; float:left;">
 				<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="BACK"
 								 styleClass="btn btn-mini btn-info"
-								 action="#{boardManaged.linkToBoard}"/>
+								 action="#{profileManaged.back}"/>
 			</div>
 		</ui:define>
         <ui:define name="content">
