--- a/src/main/webapp/fboard.xhtml
+++ b/src/main/webapp/fboard.xhtml
@@ -24,7 +24,7 @@
 					<div class="row">
 						<div class="controls">
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
-								<span class="add-on"><i class="icon-tasks" ></i></span>
+								<span class="add-on"><i class="icon-pushpin" ></i></span>
 								<p:inputText id="boardid" style="width: 480px;" disabled="true"
 											 value="#{fboardManaged.board.id}"/>
 								<p:watermark for="boardid" value="ID: " ></p:watermark>
@@ -35,7 +35,7 @@
 					<div class="row">
 						<div class="controls">
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
-								<span class="add-on"><i class="icon-tasks" ></i></span>
+								<span class="add-on"><i class="icon-pencil" ></i></span>
 								<p:inputText id="boardname" style="width: 480px;"
 											 value="#{fboardManaged.board.boardname}">
 									<f:validateRequired />
