--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -37,7 +37,7 @@
 								<p:commandButton id="grantAccount" style="margin-right: 12px;"
 												 icon="ui-icon ui-icon-person"
 												 styleClass="btn btn-mini btn-info"
-												 onclick="window.location.href='/bgile/grants/#{b.id}';" />
+												 onclick="window.location.href='/bgile/grant/#{b.id}';" />
 								<p:commandButton id="editProjet" style="margin-right: 12px;"
 												 icon="ui-icon ui-icon-disk"
 												 styleClass="btn btn-mini btn-info"
