--- a/src/main/webapp/board.xhtml
+++ b/src/main/webapp/board.xhtml
@@ -41,16 +41,6 @@
 				.ui-panel .ui-panel-footer {
 					padding: 0.2em 0.4em;
 				}
-				.ui-panel, div.ui-state-hover {
-					width :240px;
-					margin-bottom: 10px;
-				}
-				.ui-dashboard-column {
-					width:280px;
-				}
-				.ui-dashboard-header {
-					width:280px;
-				}
 				.ui-panel .ui-panel-titlebar {
 					padding: 0.2em 0em 0.2em;
 				}
@@ -64,6 +54,16 @@
 				}
 				.ui-panel-title {
 					padding-left: 4px;
+				}
+				.ui-panel, div.ui-state-hover {
+					width :240px;
+					margin-bottom: 10px;
+				}
+				.ui-dashboard-column {
+					width :260px;
+				}
+				.ui-dashboard-header {
+					width :260px;
 				}
 				pre {
 					display: block;
@@ -85,13 +85,13 @@
 			</style>
 
 			<p:growl id="growl" showDetail="true" />
-			<p:messages id="messages" />
+			<p:messages id="messages" showDetail="true" />
 
 			<div class="row-fluid" style="padding-top: 6px; padding-bottom: 6px">
-				<h4 style="width: 280px; text-align: left; float: left;">วางแผน</h4>
-				<h4 style="width: 280px; text-align: left; float: left;">กำลังทำ</h4>
-				<h4 style="width: 280px; text-align: left; float: left;">กำลังทดสอบ</h4>
-				<h4 style="width: 280px; text-align: left; float: left;">เสร็จ</h4>
+				<h4 style="width: 260px; text-align: left; float: left;">วางแผน</h4>
+				<h4 style="width: 260px; text-align: left; float: left;">กำลังทำ</h4>
+				<h4 style="width: 260px; text-align: left; float: left;">กำลังทดสอบ</h4>
+				<h4 style="width: 260px; text-align: left; float: left;">เสร็จ</h4>
 			</div>
 
 			<div class="row-fluid">
