--- a/src/main/webapp/board.xhtml
+++ b/src/main/webapp/board.xhtml
@@ -36,6 +36,7 @@
 					padding: 0.0em;
 				}
 				.ui-panel .ui-panel-content {
+					padding-left: 4px;
 					text-align: left;
 				}
 				.ui-panel .ui-panel-footer {
@@ -67,9 +68,9 @@
 				}
 				pre {
 					display: block;
-					padding: 2px;
+					padding: 0px;
 					margin: 0 0 0px;
-					font-size: 13px;
+					font-size: 11px;
 					line-height: 24px;
 					word-break: break-all;
 					word-wrap: break-word;
