--- a/src/main/webapp/fboard.xhtml
+++ b/src/main/webapp/fboard.xhtml
@@ -19,15 +19,12 @@
 			<div class="container">
 				<div style="width: 511px;">
 					<div class="row">
-						<h4>สร้างกระดานใหม่</h4>
-					</div>
-					<div class="row">
 						<div class="controls">
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<span class="add-on"><i class="icon-pushpin" ></i></span>
 								<p:inputText id="boardid" style="width: 480px;" disabled="true"
 											 value="#{fboardManaged.board.id}"/>
-								<p:watermark for="boardid" value="ID: " ></p:watermark>
+								<p:watermark for="boardid" value="BOARD: " ></p:watermark>
 							</div>
 						</div>
 					</div>
@@ -48,7 +45,7 @@
 					<div class="row">
 						<div class="controls">
 							<div style="padding-bottom: 24px; padding-left: 24px; float:left;">
-								<p:inputTextarea id="description" style="width: 510px;"
+								<p:inputTextarea id="description" style="width: 510px;" rows="6"
 												 value="#{fboardManaged.board.description}"/>
 								<p:watermark for="description" value="รายละเอียด" />
 							</div>
