--- a/src/main/webapp/fcard.xhtml
+++ b/src/main/webapp/fcard.xhtml
@@ -9,7 +9,7 @@
 				<div style="float:left;">
 					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="กระดาน"
 								 styleClass="btn btn-mini btn-info"
-								 onclick="window.location.href='/bgile/board/#{fstoryManaged.boardid}';" />
+								 onclick="window.location.href='/bgile/board/#{fCardManaged.boardid}';" />
 				</div>
 			</div>
 		</ui:define>
@@ -17,15 +17,12 @@
 			<div class="container">
 				<div style="width: 511px;">
 					<div class="row">
-						<h4>สร้างยูสเซอร์สตอรี่</h4>
-					</div>
-					<div class="row">
 						<div class="controls">
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<span class="add-on"><i class="icon-pushpin" ></i></span>
 								<p:inputText id="storyid" style="width: 480px;" disabled="true"
-											 value="#{fstoryManaged.userstory.id}"/>
-								<p:watermark for="storyid" value="US: " ></p:watermark>
+											 value="#{fCardManaged.card.id}"/>
+								<p:watermark for="storyid" value="CARD: " ></p:watermark>
 							</div>
 						</div>
 					</div>
@@ -35,7 +32,7 @@
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<span class="add-on"><i class="icon-pencil" ></i></span>
 								<p:inputText id="story" style="width: 480px;"
-											 value="#{fstoryManaged.userstory.story}" >
+											 value="#{fCardManaged.card.story}" >
 								</p:inputText>
 								<p:watermark for="story" value="รายละเอียดย่อ" />
 							</div>
@@ -47,7 +44,7 @@
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<span class="add-on"><i class="icon-time" ></i></span>
 								<p:inputText id="estimate" style="width: 480px;"
-											 value="#{fstoryManaged.userstory.estimate}" >
+											 value="#{fCardManaged.card.estimate}" >
 								</p:inputText>
 								<p:watermark for="estimate" value="เวลาโดยประมาณ" />
 							</div>
@@ -57,9 +54,8 @@
 					<div class="row">
 						<div class="controls">
 							<div style="padding-bottom: 24px; padding-left: 24px; float:left;">
-								<p:inputTextarea id="description" style="width: 510px;"
-												 value="#{fstoryManaged.userstory.description}"/>
-								<p:watermark for="description" value="รายละเอียด" />
+								<p:inputTextarea id="description" style="width: 511px;" rows="6"
+												 value="#{fCardManaged.card.description}"/>
 							</div>
 						</div>
 					</div>
@@ -69,20 +65,31 @@
 							<div style="padding-bottom: 48px; padding-left: 24px; float:left;">
 								<p:commandButton id="remove" icon="ui-icon ui-icon-closethick" value="ลบ"
 												 styleClass="btn btn-mini btn-danger"
-												 rendered="#{!fstoryManaged.newUserstory}"
-												 action="#{fstoryManaged.removeStory}"/>
+												 rendered="#{!fCardManaged.newCard}"
+												 action="#{fCardManaged.removeStory}"/>
 							</div>
 						</div>
 						<div class="controls">
 							<div style="float:right;">
 								<p:commandButton id="save" icon="ui-icon ui-icon-check" value="บันทึก"
 												 styleClass="btn btn-mini btn-success"
-												 action="#{fstoryManaged.saveStory}"/>
+												 action="#{fCardManaged.saveStory}"/>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<ui:remove>
+				<script src="#{facesContext.externalContext.requestContextPath}/assets/nicedit/nicEdit.js"></script>
+				<script type="text/javascript">
+					var area = new nicEditor(
+							{buttonList : ['fontSize','fontFamily','bold','italic','underline','strikeThrough','subscript',
+										   'superscript','left','center','right','justify','ol','ul',
+										   'indent','outdent','image','link','unlink'],
+							 iconsPath : '#{facesContext.externalContext.requestContextPath}/assets/nicedit/nicEditorIcons.gif'}
+						).panelInstance('form:description');
+				</script>
+			</ui:remove>
         </ui:define>
     </ui:composition>
 </html>
