--- a/src/main/webapp/signin.xhtml
+++ b/src/main/webapp/signin.xhtml
@@ -28,7 +28,7 @@
 				<div class="row">
 					<div class="controls">
 						<p:commandButton id="signin" value="SIGNIN"
-										 styleClass="btn btn-mini btn-success"
+										 styleClass="btn btn-success" 
 										 action="#{signinManaged.authen}" update="msg" />
 					</div>
 				</div>
